# v8engine

./: .gitignore  CMakeLists.txt  setenv.cmd  v8engine.config  v8engine.sublime-project
cmake/modules/: FindAssimp.cmake  FindDirectX.cmake  FindTBB.cmake  FindWindows8SDK.cmake
cmake/modules/findtbb-read-only/: CMakeLists.txt
include/v8/: doxygen_conf.hpp  global_state.hpp  graphis_api_traits.hpp  v8.hpp
include/v8/base/: array_proxy.hpp  associative_container_veneer.hpp  auto_buffer.hpp  auto_lock.hpp  com_exclusive_pointer.hpp  com_shared_pointer.hpp  compound_types.hpp  copy_pod_range.hpp  count_of.hpp  cpu_counter.hpp  cpu_counter_win.hpp  crt_handle_traits.hpp  debug_helpers.hpp  debug_helpers_posix.hpp  debug_helpers_win.hpp  duo.hpp  external_property.hpp  fixed_array.hpp  fixed_pod_stack.hpp  fixed_pod_vector.hpp  fundamental_types.hpp  operator_bool.hpp  pod_veneer.hpp  pod_zero_init.hpp  pointer_policies.hpp  posix_handle_policies.hpp  posix_lock_traits.hpp  posix_utils.hpp  scope_exit.hpp  scoped_handle.hpp  scoped_lock.hpp  scoped_pointer.hpp  scoped_resource.hpp  sequence_container_veneer.hpp  string_util.hpp  string_util_gcc.hpp  string_util_msvc.hpp  timers.hpp  timers_posix.hpp  timers_win.hpp  (+7 more)
include/v8/config/: config.h.in
include/v8/event/: event_delegate.hpp  fwd_event_types.hpp  input_event.hpp  window_event.hpp
include/v8/fast_delegate/: fast_delegate.hpp
include/v8/gui/: basic_window.hpp  fwd_basic_window.hpp
include/v8/input/: key_syms.hpp
include/v8/internal/: clang.hpp  gcc.hpp  mingw.hpp  msvc.hpp
include/v8/io/: config_file_reader.hpp  filesystem.hpp  fwd_filesystem.hpp
include/v8/math/: angle_units.hpp  bidimensional_space_traits.hpp  camera.hpp  camera.inl  color.hpp  color_palette_generator.hpp  depth_mapping.hpp  fixed_array_1d.hpp  fixed_array_2d.hpp  fixed_array_3d.hpp  geometry_generators.hpp  lerp.hpp  light.hpp  light.inl  math_constants.hpp  math_utils.hpp  matrix2X2.hpp  matrix2X2.inl  matrix2X3.hpp  matrix2X3.inl  matrix3X3.hpp  matrix3X3.inl  matrix4X4.hpp  matrix4X4.inl  matrix_NxM.hpp  out_of_bounds_array_access_policy.hpp  projection.hpp  quaternion.hpp  quaternion.inl  space_traits.hpp  transform.hpp  transform.inl  tridimensional_space_traits.hpp  vector2.hpp  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl  vector_N.hpp
include/v8/meta_programming/: constraints.hpp  if_then_else.hpp  param_select.hpp
include/v8/rendering/: blend_state.hpp  buffer_swapper.hpp  compute_shader.hpp  constants.hpp  depth_stencil_state.hpp  effect.hpp  effect_info.hpp  effect_pass.hpp  effect_technique.hpp  fps_counter.hpp  fragment_shader.hpp  fwd_effect.hpp  fwd_effect_pass.hpp  fwd_effect_technique.hpp  fwd_render_assets_cache.hpp  fwd_renderer.hpp  fwd_resource_manager.hpp  fwd_texture.hpp  geometry_shader.hpp  index_buffer.hpp  input_layout.hpp  material.hpp  rasterizer_state.hpp  render_assets_cache.hpp  render_init_params.hpp  renderer.hpp  sampler_state.hpp  shader_info.hpp  simple_mesh.hpp  texture.hpp  texture_descriptor.hpp  texture_info.hpp  texture_shader_binding.hpp  texture_unordered_access_binding.hpp  vertex_buffer.hpp  vertex_p.hpp  vertex_pc.hpp  vertex_pn.hpp  vertex_pnt.hpp  vertex_pt.hpp  (+2 more)
include/v8/scene/: cam_controller_spherical_coordinates.hpp  camera_controller.hpp  custom_entity.hpp  fwd_scene_loading_info.hpp  fwd_scene_system.hpp  geometric_entity.hpp  group_node.hpp  null_camera_controller.hpp  scene_config_reader.hpp  scene_entity.hpp  scene_loading_info.hpp  scene_system.hpp  simple_node.hpp  standard_entity.hpp
include/v8/utility/: algorithms.hpp  geometry_importer.hpp  hash_fnv1a.hpp  hash_spooky.hpp  hash_string.hpp  ifs_loader.hpp  string_ext.hpp  win_util.hpp
libs/: CMakeLists.txt
libs/v8/: CMakeLists.txt  global_state.cc
libs/v8/base/: CMakeLists.txt  debug_helpers_posix.cc  debug_helpers_win.cc  pch_hdr.hpp  pch_hdr_posix.hpp  pch_hdr_windows.hpp  ref_link_base.cc  v8_base.vcxproj  v8_base.vcxproj.filters  win32_utils.cc
libs/v8/gui/: CMakeLists.txt  basic_window.cc
libs/v8/input/: CMakeLists.txt  key_syms_win.cc
libs/v8/io/: CMakeLists.txt  config_file_reader.cc  filesystem.cc
libs/v8/math/: CMakeLists.txt  camera.cc  color.cc  color_palette_generator.cc  culler.cc  geometry_generators.cc  light.cc  math.vcxproj  math.vcxproj.filters  pch_hdr.cc  pch_hdr.hpp
libs/v8/rendering/: CMakeLists.txt  material.cc  render_assets_cache.cc  simple_mesh.cc
libs/v8/rendering/directx/: CMakeLists.txt  blend_state.cc  buffer_swapper.cc  depthstencil_state.cc  effect.cc  effect_manager.cc  effect_pass.cc  effect_technique.cc  gpu_shader.cc  input_layout.cc  rasterizer_state.cc  renderer.cc  sampler_state.cc  shader_compiler.cc  texture.cc  texture_shader_binding.cc  texture_unordered_access_binding.cc
libs/v8/rendering/directx/internal/: dds_texture_loader.cc  debug_helpers.cc  dxerr.cc  gpu_buffer_core.cc  include_handler.cc  shader_common_base.cc  shader_profile_strings.cc  utilities.cc
libs/v8/scene/: CMakeLists.txt  cam_controller_spherical_coordinates.cc  camera_controller.cc  custom_entity.cc  geometric_entity.cc  group_node.cc  list.txt  null_camera_controller.cc  scene_config_reader.cc  scene_entity.cc  scene_system.cc  standard_entity.cc
libs/v8/utility/: CMakeLists.txt  geometry_importer.cc  win_util.cc  (+3 more)
misc/: books.txt
sample_projects/: CMakeLists.txt
sample_projects/basic_drawing/: CMakeLists.txt  DDSTextureLoader.cc  DDSTextureLoader.h  aircraft_f4.cc  aircraft_f4.hpp  app_context.hpp  floor_plane.cc  floor_plane.hpp  igeometry_shape.hpp  main.cc  window.cc  window.hpp
sample_projects/basic_opengl/: CMakeLists.txt  main.cc
sample_projects/julia_fractal/: CMakeLists.txt  application_context.hpp  fractal.cc  fractal.hpp  fractal_window.cc  fractal_window.hpp  main.cc
sample_projects/lighting/: CMakeLists.txt  grid.cc  grid.hpp  main.cc
sample_projects/simple_animation/: CMakeLists.txt  animated_aircraft.cc  animated_aircraft.hpp  draw_context.hpp  main.cc  main_window.cc  main_window.hpp  texture_wrapper.hpp
sample_projects/test/: CMakeLists.txt  main.cc
(+132 files in other folders)
